fixtures/typescript/test_double/should_fail/runtime_fake.tsx
export class FakeUserRepository {
  get(id: string) {
    return <span>{id}</span>;
  }
}
